-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8, 9, 10
-
Component/s: hotspot
-
b21
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275140 | openjdk8u322 | Fei Yang | P2 | Resolved | Fixed | b01 |
static int test1() {
int[] src = new int[10];
test_dummy = src;
int[] dst = new int[10];
src[1] = 0x42;
System.arraycopy(src, 1, dst, 1, 9);
return dst[1];
}
generates a load from src[1] on the raw memory slice that can be reordered with the store to src[1]. Always fail on 8. Only fail on 9 & 10 if we're unlucky with load scheduling.
int[] src = new int[10];
test_dummy = src;
int[] dst = new int[10];
src[1] = 0x42;
System.arraycopy(src, 1, dst, 1, 9);
return dst[1];
}
generates a load from src[1] on the raw memory slice that can be reordered with the store to src[1]. Always fail on 8. Only fail on 9 & 10 if we're unlucky with load scheduling.
- backported by
-
JDK-8275140 Load from initializing arraycopy uses wrong memory state
-
- Resolved
-