8182036: Load from initializing arraycopy uses wrong memory state

Reviewed-by: kvn